# homeVlog

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  HomeVlog_AI_Coding_Guideline_V2.md  README.md  config.example.yaml  config.yaml  main.py  pyproject.toml  参考文档.md  审计报告与优化方案.md
.claude/: settings.local.json
config/: settings.yaml
docs/: CROSS_PROJECT_PATTERNS.md  PERFORMANCE_OPTIMIZATION_PLAN.md  RETROSPECTIVE.md  SPECIFICATION.md  TODO.md  architecture.md  development.md  homevlog_optimization_log.md  homevlog_perf_review.md  performance.md  yolo_cascade_design.md
scripts/: inspect_detection.py
src/: database.py  detector.py  ffmpeg.py  monitor.py  pipeline.py  prescreen.py  renderer.py  scanner.py  scheduler.py  segment.py  timeline.py  utils.py  yolo_verifier.py
src/homevlog/: config.py  main.py  scanner.py
src/homevlog/dashboard/: generate_report.py
src/homevlog/database/: sqlite_manager.py
src/homevlog/hal/: __init__.py  base.py  mock_backend.py  tensorrt_backend.py
src/homevlog/pipeline/: aggregator.py  decoder.py  tracker.py
src/homevlog/utils/: ffmpeg_tools.py  motion_analyzer.py  time_utils.py
tools/: test_analysis.py  test_prescreen.py
